Bug 245972 - font-variant-east-asian wrongly expects to be the last longhand in the font-variant shorthand.
Summary: font-variant-east-asian wrongly expects to be the last longhand in the font-v...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-03 10:59 PDT by Matthieu Dubet
Modified: 2022-10-04 11:01 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthieu Dubet 2022-10-03 10:59:55 PDT
From the Color Font Level 4 spec, it should be usable in any order in the font-variant shorthand.

https://drafts.csswg.org/css-fonts-4/#font-variant-prop

"Separating two or more components by a double bar, ||, means that all entities are options: at least one of them must be present, and they may appear in any order. Typically this is used to define the different values of a shorthand property."
Comment 1 Matthieu Dubet 2022-10-03 15:13:30 PDT
Pull request: https://github.com/WebKit/WebKit/pull/4945
Comment 2 Radar WebKit Bug Importer 2022-10-04 07:04:23 PDT
<rdar://problem/100761060>
Comment 3 EWS 2022-10-04 11:01:27 PDT
Committed 255134@main (fd7b349b71ef): <https://commits.webkit.org/255134@main>

Reviewed commits have been landed. Closing PR #4945 and removing active labels.