Allow font-variant east-asian shorthand in any position https://bugs.webkit.org/show_bug.cgi?id=245972

Reviewed by Darin Adler.

The property font-variant-east-asian can be used in any position
in the font-variant shorthand ; it should not check
that the range is finished.

https://drafts.csswg.org/css-fonts-4/#font-variant-prop

* LayoutTests/fast/text/font-variant-shorthand-expected.txt:
* LayoutTests/fast/text/font-variant-shorthand.html:

Add tests which fail before this change.

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-variant-east-asian-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-variant-east-asian-invalid.html:

Imported from WPT.

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-variant-valid-expected.txt:
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::consumeFontVariantEastAsian):

Canonical link: https://commits.webkit.org/255134@main